# veriet-f

backend/: .env  pyproject.toml  requirements.txt
backend/services/document-processor/: main.py
backend/services/document_intelligence/: __init__.py  document_converter.py  main.py  models.py  output_document.md  rag_service.py  service.py  storage_service.py  test_service.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/files/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: files-attention-section.tsx  index.ts  recent-activity-section.tsx  summary-section.tsx
frontend/app/settings/: layout.tsx
frontend/app/settings/account/: page.tsx
frontend/app/settings/billing/: billing-section-skeleton.tsx  billing-section.tsx  page.tsx
frontend/app/settings/organisation/: page.tsx
frontend/app/sign-in/[[...rest]]/: page.tsx
frontend/components/: logo.tsx  mode-toggle.tsx  navbar-wrapper.tsx  navbar.tsx  org-switcher.tsx  status-badge.tsx  theme-provider.tsx  upload-button.tsx
frontend/components/ui/: sonner-variants.ts
frontend/database/: debug_check_table.sql  disable_rls_for_testing.sql
frontend/database/migrations/: 001_create_documents_table.sql  002_create_documents_simple.sql  003_create_document_chunks_table.sql  004_fix_embedding_dimensions.sql  005_hybrid_embedding_approach.sql
frontend/hooks/: use-debounce.ts  use-file-upload.ts  use-files.ts
frontend/lib/: query-provider.tsx  utils.ts
(+12 files in other folders)
